--- a/client/table/table.html
+++ b/client/table/table.html
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <!--<tr>
         <td>John</td>
         <td>Doe</td>
         <td>john@example.com</td>
@@ -22,7 +22,12 @@
         <td>July</td>
         <td>Dooley</td>
         <td>july@example.com</td>
+      </tr>-->
+      {{#each sat}}
+      <tr>
+        <td>{{school}}</td>
       </tr>
+      {{/each}}
     </tbody>
   </table>
 </template>
