--- a/client/head.html
+++ b/client/head.html
@@ -8,7 +8,7 @@
 
     <!-- Including open layer java script -->
     <script src="https://openlayers.org/en/v3.19.1/build/ol.js" type="text/javascript"></script>
-    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFqA_wqLzyUdJsADQIHoHZjCCrDaTwN3s"></script>
     <title>OpenLayers 3 example</title>
  
 </head>
